this should fix a deprecation warning from Google's annotation  processor